fixed horizontal scroll on smaller phones and links

--- a/portfolio/src/app/experience/experience.component.css
+++ b/portfolio/src/app/experience/experience.component.css
@@ -23,7 +23,6 @@ app-work-entry{
   border: 2px solid ;
   height: 250px;
   border-radius: 10px;
-  overflow:hidden;
   padding: 1rem;
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
