--- a/portfolio/src/app/footer/footer.component.css
+++ b/portfolio/src/app/footer/footer.component.css
@@ -3,7 +3,7 @@ main {
   min-height: 25vh;
   align-items: center;
   justify-content: center;
-
+width: 100vw;
   div {
     display: flex;
     align-items: center;
